@@ -1,3 +1,11 @@
+2001-12-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Drawable.cpp (DrawableCompositeImage): Read image
+ 	immediately if provided by filename, register with peristent
+ 	registry, and pass as perisistant image type.
+	(DrawableCompositeImage): Support specifying Image in memory.
+  	Passed as perisistant image type.
+
 2001-12-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Color.cpp (operator std::string): Color string buffer was
